<resources>
    <string name="app_name">Git Issues</string>

    <string name="tab_recents">Recents</string>
    <string name="tab_repositories">Repos</string>
    <string name="tab_pullrequests">Pull Requests</string>
    <string name="tab_write">Write</string>
    <string name="tab_preview">Preview</string>
    <string name="label_private">Private</string>
    <string name="opened_this_issue">opened this issue</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="empty_message_generic">Uh-oh! Looks like nothing is here.</string>
    <string name="hint_comment_input">Leave a comment…</string>
    <string name="action_labels">Labels</string>
    <string name="action_milestones">Milestones</string>
    <string name="action_assignees">Assignees</string>
    <string name="action_new_comment">New comment</string>
    <string name="action_save">Save</string>
    <string name="empty_labels">Looks like there aren\'t any labels to add</string>
    <string name="action_create_label">Create label</string>
    <string name="label_milestone_updated">Last updated %1$s</string>
    <string name="label_milestone_dueon">Due by %1$s</string>
    <string name="label_milestone_no_dueon">No due date</string>
    <string name="complete">complete</string>
    <string name="open">open</string>
    <string name="closed">closed</string>
    <string name="close_issue">Close Issue</string>
    <string name="open_issue">Open issue</string>

</resources>
